prod_snapshot_2015-09-24_1030/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Owner_Email_Address__c</fullName>
        <formula>Owner__r.Email</formula>
        <label>Owner Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Status__c</fullName>
        <formula>IF(Owner__r.IsActive = True,&quot;Active&quot;,&quot;InActive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PPC_Budget__c</fullName>
        <label>PPC Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PPC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Account_ID__c</fullName>
        <label>Partner Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Region__c</fullName>
        <description>Geographic designation linked to the Partner Markets, typically used for reporting purposes</description>
        <inlineHelpText>Geographic designation linked to the Partner Markets, typically used for reporting purposes</inlineHelpText>
        <label>Partner Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type_Ref__c</fullName>
        <description>References the Media Partner&apos;s Partner type.</description>
        <formula>Text(Market_Originator__r.Partner_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Type Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>USCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <label>Previous Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Name__c</fullName>
        <label>Primary Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <label>Primary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_SIC_Description__c</fullName>
        <label>Primary SIC Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_ID__c</fullName>
        <formula>BillingState &amp; &quot;-&quot; &amp;  LEFT(BillingCity, 3)   &amp; Left(Name ,3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proxy_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proxy Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM_Region__c</fullName>
        <label>RSM Region</label>
        <picklist>
            <picklistValues>
                <fullName>BC North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Red_Flag_Reason__c</fullName>
        <label>Red Flag Reason</label>
        <picklist>
            <picklistValues>
                <fullName>High Refunds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Unreasonable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Owner/Not Honoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Requested Cancelation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Red_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used when we will not longer run a deal with a merchant for the following reasons.</inlineHelpText>
        <label>Red Flag?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refund_Percent__c</fullName>
        <formula>Refunds__c /  Gross_Revenues__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refund Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Refunds__c</fullName>
        <label>Refunds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SEO_Keywords__c</fullName>
        <label>SEO Keywords</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SEO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SEO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Second Company)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SocialMediaSpecialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Social Media Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_Media__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Media</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Terms__c</fullName>
        <label>Special Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Restrictions_Guidelines__c</fullName>
        <inlineHelpText>These are the redemption guidelines that every deal generated from this company record needs to have when published.</inlineHelpText>
        <label>Standard Restrictions/Guidelines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Bedding stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiropractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic Surgeons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dentists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatologists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture Repair and Upholsterers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware and Garden stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home electronics and appliance stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home furnishings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Repair/Maintenance Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landscaping/Lawn Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawn &amp; Landscape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locksmiths/Security &amp; Alarm Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Professionals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ophthalmologists/Optometrists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pest Control Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical/Occupational Therapists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumbing Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podiatrists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodelers/Designers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roofing/Siding Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upholstery and Coverings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterinarians</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleges &amp; universities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty schools/studios</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TB_Proposal_Partner_Name__c</fullName>
        <label>TB Proposal - Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchKey__c</fullName>
        <formula>Name &amp; BillingPostalCode &amp; BillingCity &amp; BillingState &amp; BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MatchKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchLevel__c</fullName>
        <label>Match Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchScore__c</fullName>
        <label>MatchScore</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Third Company)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Account Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Touched_Neglected__c</fullName>
        <formula>IF(DATEVALUE(NOW()) -   LastActivityDate  &gt;30,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Touched Neglected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Touched_This_Month__c</fullName>
        <formula>IF(DATEVALUE(NOW()) - LastActivityDate  &lt; 31,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Touched This Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trans_List__c</fullName>
        <label>Last_Trans List</label>
        <picklist>
            <picklistValues>
                <fullName>BUR-ACT-06132010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIN-ACT-03152011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLC-ACT-09272010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSM-ACT-12012010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSM-LAP-04152011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCL-ACT-08182010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND-ACT-04052011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAC-ACT-01152010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTR-ACT-09062010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAS-LAP-06182010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSA-ACT-01202010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RNO-ACT-02032011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAR-ACT-06292010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAR-ACT-07152010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAR-ACT-07282010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAR-ACT-11052010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAR-HSC-02232010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAR-LAP-01082010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAR-LAP-02022010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUS-LAP-08022010</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <label>Vendor ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website_2__c</fullName>
        <label>Website #2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Website_Address__c</fullName>
        <label>Website Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Website_Options__c</fullName>
        <label>Website Options</label>
        <picklist>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Capture Page</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_at_home_business__c</fullName>
        <label>Work at home business</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_first_appeared_in_Yellow_Pages__c</fullName>
        <label>Year first appeared in Yellow Pages</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Domain_Mapping__c</fullName>
        <label>Domain Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <description>Contains the result of whether the Zendesk system was updated with the Account record changes</description>
        <label>Zendesk Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization_Id__c</fullName>
        <description>Contains the Zendesk ORG Id</description>
        <label>Zendesk Organization Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization__c</fullName>
        <description>Specify your Zendesk Organization name here if you&apos;d like to override the default behavior of the ticket view.</description>
        <inlineHelpText>Show Zendesk tickets for the specified organization instead of the combined tickets for all users in the account.</inlineHelpText>
        <label>Zendesk Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True if the record is not synced with Zendesk Organization</description>
        <label>Zendesk_OutofSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <description>contains the old tags before changes were made to the tags. To handle deleting tags in Zendesk system.</description>
        <label>Zendesk_oldTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__createdUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the account that came for creation to get updated again thereby preventing the loop</description>
        <label>createdUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <formula>IF(Opps_Num_Active__c &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFranchise__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this company is a franchise</description>
        <inlineHelpText>If checked, this company is a franchise</inlineHelpText>
        <label>Franchise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseDate__c</fullName>
        <description>This field stores when the InsideSales.com NeuralView Close Score was last updated</description>
        <label>NeuralView: Close Score Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__CloseScore__c</fullName>
        <description>This field stores the InsideSales.com NeuralView Close Score</description>
        <label>NeuralView: Close Score</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__LastCallTime__c</fullName>
        <description>The field should not be modified by users, it is intended for use in the filters of the Seek Initiatives.</description>
        <label>Last Call Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ResponseTime__c</fullName>
        <description>This field will store the number of seconds between record creation time and first call time (via the PowerDialer).</description>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__TimeZoneSidKey__c</fullName>
        <description>This field will store the TimeZoneSidKey for the Account.</description>
        <label>TimeZone Sid Key</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>radius__Hours__c</fullName>
        <label>Hours</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Mark__c</columns>
        <columns>CF_Line_Break__c</columns>
        <columns>CF_Set__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.SML_Company</value>
        </filters>
        <filters>
            <field>CF_Line_Break__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>oconnortest</label>
    </listViews>
    <listViews>
        <fullName>All_Companies</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Companies</label>
    </listViews>
    <listViews>
        <fullName>Bannon_Companies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Other_Detail__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>brannon</value>
        </filters>
        <label>Brannon Companies</label>
    </listViews>
    <listViews>
        <fullName>Binghamton</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Partner_Type__c</columns>
        <columns>Market_Record__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.PartnerMarket</value>
        </filters>
        <label>Partner Market Companies</label>
        <sharedTo>
            <role>DCGannettLocalRep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CFReportingRequests</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Market_Originator__c</columns>
        <columns>CF_UserFirst__c</columns>
        <columns>CF_UserLast__c</columns>
        <columns>CF_UserEmail__c</columns>
        <columns>CF_Reporting_Requested__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CF_Reporting_Requested__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CFReportingRequests</label>
    </listViews>
    <listViews>
        <fullName>Click_Fuel_Last_Export_gl</fullName>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Market_Originator__c</columns>
        <columns>Affiliated_Sales_Rep__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Owner__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>CF_Client_Status__c</columns>
        <columns>CF_CheckSend__c</columns>
        <columns>CF_Action__c</columns>
        <columns>Affl_Sales_Rep__c</columns>
        <columns>Count_DFL__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <filters>
            <field>Digital_Opps__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Media_Property_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.SML_Company,Account.OnBoarding</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>gl</value>
        </filters>
        <label>Click Fuel Last Export gl</label>
    </listViews>
    <listViews>
        <fullName>Click_Fuel_Next_Export</fullName>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Market_Originator__c</columns>
        <columns>Affiliated_Sales_Rep__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Owner__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>CF_Client_Status__c</columns>
        <columns>CF_CheckSend__c</columns>
        <columns>CF_Action__c</columns>
        <columns>Affl_Sales_Rep__c</columns>
        <columns>Count_DFL__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CF_CheckSend__c</field>
            <operation>equals</operation>
            <value>Add Or Update</value>
        </filters>
        <filters>
            <field>Digital_Opps__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Media_Property_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.SML_Company,Account.OnBoarding</value>
        </filters>
        <label>Click Fuel Next Export</label>
    </listViews>
    <listViews>
        <fullName>Clipper_Markets</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>RSM_Region__c</columns>
        <columns>Media_Property_List__c</columns>
        <columns>Partner_Type__c</columns>
        <columns>Market_Originator__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Last_Rep_Sum_Run__c</columns>
        <columns>Last_Rep_Summary__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>DC_Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.PartnerMarket</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>clipper</value>
        </filters>
        <label>Clipper Markets</label>
    </listViews>
    <listViews>
        <fullName>McGrory_Companies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>McGrory</value>
        </filters>
        <label>McGrory Companies</label>
    </listViews>
    <listViews>
        <fullName>Mould_Companies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>mould</value>
        </filters>
        <label>Mould Companies</label>
    </listViews>
    <listViews>
        <fullName>My_Companies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Market_Originator__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Companies</label>
    </listViews>
    <listViews>
        <fullName>OnBoardSubmittalsInQueue</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Affiliated_Sales_Rep__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Market_List__c</columns>
        <columns>DC_Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>guest</value>
        </filters>
        <label>OnBoard Submittals In Queue</label>
        <sharedTo>
            <role>JSSManager</role>
            <role>JSS_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partner_Markets</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>RSM_Region__c</columns>
        <columns>Media_Property_List__c</columns>
        <columns>Partner_Type__c</columns>
        <columns>Market_Originator__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Last_Rep_Sum_Run__c</columns>
        <columns>Last_Rep_Summary__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>DC_Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.PartnerMarket</value>
        </filters>
        <label>Partner Markets</label>
    </listViews>
</CustomObject>